[gd_scene load_steps=15 format=3 uid="uid://srh7fu8uprij"]

[ext_resource type="Texture2D" uid="uid://dkushodgai21s" path="res://assets/background.png" id="1"]
[ext_resource type="Script" path="res://battle/BattleScene.gd" id="1_vb5nx"]
[ext_resource type="PackedScene" uid="uid://dgk0dpadx1wkc" path="res://battle/Space.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://cifdlrxp33p1u" path="res://assets/grid.png" id="5"]
[ext_resource type="PackedScene" uid="uid://bub37ipigql3v" path="res://battle/Character.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://d2x4fgnxceh5u" path="res://battle/end_of_turn.tscn" id="7_np6ef"]
[ext_resource type="Script" path="res://battle/to_overworld_button.gd" id="8_iab5r"]
[ext_resource type="PackedScene" uid="uid://t32b4boxehdt" path="res://battle/Enemy.tscn" id="8_kyk1e"]
[ext_resource type="PackedScene" uid="uid://deikkfb2ghqvw" path="res://battle/food.tscn" id="9_1n73l"]
[ext_resource type="AudioStream" uid="uid://88wruo2jyoh8" path="res://Music/battle_music (surf).ogg" id="10_i4mvg"]
[ext_resource type="PackedScene" uid="uid://dxqbt1cqviw66" path="res://card_ui/card_ui.tscn" id="11_23mjc"]
[ext_resource type="Script" path="res://battle_ui/hand.gd" id="11_o3fgr"]

[sub_resource type="GDScript" id="GDScript_76nkh"]
script/source = "extends Button




func _on_pressed():
	get_tree().change_scene_to_file(\"res://start_menu/start_menu.tscn\")
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u21m3"]
size = Vector2(437, 304)

[node name="BattleScene" type="Node2D"]
script = ExtResource("1_vb5nx")

[node name="Spaces" type="Node2D" parent="."]

[node name="Space0" parent="Spaces" instance=ExtResource("2")]
position = Vector2(218.395, 66.9937)
collision_layer = 2
collision_mask = 0

[node name="Space1" parent="Spaces" instance=ExtResource("2")]
position = Vector2(279.401, 67.8088)
collision_layer = 2
collision_mask = 0
grid_pos = [1, 0]

[node name="Space2" parent="Spaces" instance=ExtResource("2")]
position = Vector2(338.676, 67.8088)
collision_layer = 2
collision_mask = 0
grid_pos = [2, 0]

[node name="Space3" parent="Spaces" instance=ExtResource("2")]
position = Vector2(400.346, 67.8088)
collision_layer = 2
collision_mask = 0
grid_pos = [3, 0]

[node name="Space4" parent="Spaces" instance=ExtResource("2")]
position = Vector2(460.818, 68.4076)
collision_layer = 2
collision_mask = 0
grid_pos = [4, 0]

[node name="Space5" parent="Spaces" instance=ExtResource("2")]
position = Vector2(520.692, 68.4076)
collision_layer = 2
collision_mask = 0
grid_pos = [5, 0]

[node name="Space6" parent="Spaces" instance=ExtResource("2")]
position = Vector2(580.566, 68.4076)
collision_layer = 2
collision_mask = 0
grid_pos = [6, 0]

[node name="Space7" parent="Spaces" instance=ExtResource("2")]
position = Vector2(218.929, 127.084)
collision_layer = 2
collision_mask = 0
grid_pos = [0, 1]

[node name="Space8" parent="Spaces" instance=ExtResource("2")]
position = Vector2(278.803, 125.886)
collision_layer = 2
collision_mask = 0
grid_pos = [1, 1]

[node name="Space9" parent="Spaces" instance=ExtResource("2")]
position = Vector2(338.676, 126.485)
collision_layer = 2
collision_mask = 0
grid_pos = [2, 1]

[node name="Space10" parent="Spaces" instance=ExtResource("2")]
position = Vector2(400.945, 126.485)
collision_layer = 2
collision_mask = 0
grid_pos = [3, 1]

[node name="Space11" parent="Spaces" instance=ExtResource("2")]
position = Vector2(459.022, 126.485)
collision_layer = 2
collision_mask = 0
grid_pos = [4, 1]

[node name="Space12" parent="Spaces" instance=ExtResource("2")]
position = Vector2(521.291, 126.485)
collision_layer = 2
collision_mask = 0
grid_pos = [5, 1]

[node name="Space13" parent="Spaces" instance=ExtResource("2")]
position = Vector2(581.165, 125.886)
collision_layer = 2
collision_mask = 0
grid_pos = [6, 1]

[node name="Space14" parent="Spaces" instance=ExtResource("2")]
position = Vector2(219.528, 182.766)
collision_layer = 2
collision_mask = 0
grid_pos = [0, 2]

[node name="Space15" parent="Spaces" instance=ExtResource("2")]
position = Vector2(279.401, 183.964)
collision_layer = 2
collision_mask = 0
grid_pos = [1, 2]

[node name="Space16" parent="Spaces" instance=ExtResource("2")]
position = Vector2(339.275, 183.964)
collision_layer = 2
collision_mask = 0
grid_pos = [2, 2]

[node name="Space17" parent="Spaces" instance=ExtResource("2")]
position = Vector2(400.346, 182.766)
collision_layer = 2
collision_mask = 0
grid_pos = [3, 2]

[node name="Space18" parent="Spaces" instance=ExtResource("2")]
position = Vector2(460.22, 183.964)
collision_layer = 2
collision_mask = 0
grid_pos = [4, 2]

[node name="Space19" parent="Spaces" instance=ExtResource("2")]
position = Vector2(521.291, 185.161)
collision_layer = 2
collision_mask = 0
grid_pos = [5, 2]

[node name="Space20" parent="Spaces" instance=ExtResource("2")]
position = Vector2(580.566, 184.563)
collision_layer = 2
collision_mask = 0
grid_pos = [6, 2]

[node name="Space21" parent="Spaces" instance=ExtResource("2")]
position = Vector2(219, 242)
collision_layer = 2
collision_mask = 0
grid_pos = [0, 3]

[node name="Space22" parent="Spaces" instance=ExtResource("2")]
position = Vector2(277.605, 241.443)
collision_layer = 2
collision_mask = 0
grid_pos = [1, 3]

[node name="Space23" parent="Spaces" instance=ExtResource("2")]
position = Vector2(339.874, 242.041)
collision_layer = 2
collision_mask = 0
grid_pos = [2, 3]

[node name="Space24" parent="Spaces" instance=ExtResource("2")]
position = Vector2(400.346, 242.64)
collision_layer = 2
collision_mask = 0
grid_pos = [3, 3]

[node name="Space25" parent="Spaces" instance=ExtResource("2")]
position = Vector2(459.621, 241.443)
collision_layer = 2
collision_mask = 0
grid_pos = [4, 3]

[node name="Space26" parent="Spaces" instance=ExtResource("2")]
position = Vector2(520.692, 240.844)
collision_layer = 2
collision_mask = 0
grid_pos = [5, 3]

[node name="Space27" parent="Spaces" instance=ExtResource("2")]
position = Vector2(580.566, 243.239)
collision_layer = 2
collision_mask = 0
grid_pos = [6, 3]

[node name="Space28" parent="Spaces" instance=ExtResource("2")]
position = Vector2(218, 300)
collision_layer = 2
collision_mask = 0
grid_pos = [0, 4]

[node name="Space29" parent="Spaces" instance=ExtResource("2")]
position = Vector2(279.401, 300.119)
collision_layer = 2
collision_mask = 0
grid_pos = [1, 4]

[node name="Space30" parent="Spaces" instance=ExtResource("2")]
position = Vector2(338.078, 300.119)
collision_layer = 2
collision_mask = 0
grid_pos = [2, 4]

[node name="Space31" parent="Spaces" instance=ExtResource("2")]
position = Vector2(397.951, 300.119)
collision_layer = 2
collision_mask = 0
grid_pos = [3, 4]

[node name="Space32" parent="Spaces" instance=ExtResource("2")]
position = Vector2(458.424, 299.52)
collision_layer = 2
collision_mask = 0
grid_pos = [4, 4]

[node name="Space33" parent="Spaces" instance=ExtResource("2")]
position = Vector2(520.692, 299.52)
collision_layer = 2
collision_mask = 0
grid_pos = [5, 4]

[node name="Space34" parent="Spaces" instance=ExtResource("2")]
position = Vector2(580.566, 300.119)
collision_layer = 2
collision_mask = 0
grid_pos = [6, 4]

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1")
centered = false
metadata/_edit_lock_ = true

[node name="Grid" type="Sprite2D" parent="."]
position = Vector2(399, 183)
scale = Vector2(15.1034, 14.4762)
texture = ExtResource("5")

[node name="Characters" type="Node2D" parent="."]

[node name="Player" parent="Characters" instance=ExtResource("7")]
position = Vector2(400, 296)

[node name="Enemy" parent="Characters" instance=ExtResource("8_kyk1e")]
position = Vector2(399, 68)

[node name="UI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
offset_right = 40.0
offset_bottom = 40.0

[node name="to_menu_button" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "Quit to Menu"
script = SubResource("GDScript_76nkh")
metadata/_edit_use_anchors_ = true

[node name="to_overworld_button" type="Button" parent="UI/VBoxContainer"]
layout_mode = 2
text = "To Overworld"
script = ExtResource("8_iab5r")

[node name="EndOfTurn" parent="." instance=ExtResource("7_np6ef")]
position = Vector2(90, 152)

[node name="Food" parent="." instance=ExtResource("9_1n73l")]
position = Vector2(339, 182)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_i4mvg")
autoplay = true

[node name="CardDropArea" type="Area2D" parent="."]
collision_layer = 2
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropArea"]
visible = false
position = Vector2(398.5, 184)
shape = SubResource("RectangleShape2D_u21m3")

[node name="BattleUI" type="CanvasLayer" parent="." groups=["ui_layer"]]

[node name="Hand" type="HBoxContainer" parent="BattleUI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -108.041
offset_right = 176.0
offset_bottom = -52.041
grow_vertical = 0
alignment = 1
script = ExtResource("11_o3fgr")

[node name="CardUI" parent="BattleUI/Hand" instance=ExtResource("11_23mjc")]
layout_mode = 2

[node name="CardUI2" parent="BattleUI/Hand" instance=ExtResource("11_23mjc")]
layout_mode = 2

[node name="CardUI3" parent="BattleUI/Hand" instance=ExtResource("11_23mjc")]
layout_mode = 2

[node name="CardUI4" parent="BattleUI/Hand" instance=ExtResource("11_23mjc")]
layout_mode = 2

[connection signal="enemys_turn" from="." to="Characters/Enemy" method="_on_battle_scene_enemys_turn"]
[connection signal="players_turn" from="." to="Characters/Player" method="_on_battle_scene_players_turn"]
[connection signal="move_player" from="Spaces/Space0" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space1" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space2" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space3" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space4" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space5" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space6" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space7" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space8" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space9" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space10" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space11" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space12" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space13" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space14" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space15" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space16" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space17" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space18" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space19" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space20" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space21" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space22" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space23" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space24" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space25" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space26" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space27" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space28" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space29" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space30" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space31" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space32" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space33" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="move_player" from="Spaces/Space34" to="Characters/Player" method="_on_Space_move_player"]
[connection signal="end_turn" from="Characters/Enemy" to="." method="_on_enemy_end_turn"]
[connection signal="pressed" from="UI/VBoxContainer/to_menu_button" to="UI/VBoxContainer/to_menu_button" method="_on_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/to_overworld_button" to="UI/VBoxContainer/to_overworld_button" method="_on_pressed"]
[connection signal="end_turn" from="EndOfTurn" to="." method="_on_end_of_turn_end_turn"]
[connection signal="collect_food" from="Food" to="Characters/Player" method="_on_food_collect_food"]
[connection signal="decision_collect_food" from="Food" to="Characters/Player" method="_on_food_decision_collect_food"]
[connection signal="ignore_food" from="Food" to="Characters/Player" method="_on_food_ignore_food"]
